<?xml version="1.0"?>
<package>
  <name>shsa_ros</name>
  <version>0.1.0</version>
  <description>Self-Healing by Structural Adaptation for ROS</description>
  <maintainer email="denise.ratasich@tuwien.ac.at">Denise Ratasich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
